# squishRS

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  perf.data  perf.data.old  src.squish
.github/: CODEOWNERS
.github/workflows/: ci.yml
src/: cli.rs  lib.rs  main.rs  progress.rs
src/archive/: chunk.rs  header.rs  list.rs  mod.rs  pack.rs  reader.rs  tests.rs  unpack.rs  writer.rs
src/chunk/: mod.rs
src/cmd/: mod.rs  progress_bar.rs  tests.rs
src/fsutil/: directory.rs  mod.rs  tests.rs  writer.rs
src/pack/: mod.rs
src/util/: chunk.rs  errors.rs  header.rs  list.rs  mod.rs  tests.rs  unpack.rs
src1/: main.rs
src1/archive/: mod.rs  reader.rs  writer.rs
src1/cmd/: mod.rs  progress_bar.rs  tests.rs
src1/fsutil/: tests.rs  writer.rs
src1/util/: mod.rs
tests/: cli_tests.rs  roundtrip.rs  walk_dir.rs
