[package]
name = "squishrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "5.1.6"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
indicatif = "0.17.11"
libflate = "2.1.0"
num-format = "0.4.4"
prettytable = "0.10.0"
sha2 = "0.10.9"
