[package]
name = "squish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "5.1.6"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
dashmap = "6.1.0"
indicatif = "0.17.11"
num-format = "0.4.4"
prettytable = "0.10.0"
rayon = "1.10.0"
sha2 = "0.10.9"
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3.20.0"
