[package]
name = "squishrs"
version = "1.0.2"
authors = ["Sam Boffey sam.boffey04@gmail.com"]
edition = "2021"

license = "MIT"
description = "Platform independent compression tool via zstd"
repository = "https://github.com/SamB032/squishrs"
homepage = "https://github.com/SamB032/squishrs"
documentation = "https://docs.rs/squishrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "5.1.6"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
crossbeam = "0.8.4"
dashmap = "6.1.0"
indicatif = "0.17.11"
num-format = "0.4.4"
prettytable = "0.10.0"
rayon = "1.10.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3.20.0"
